# uv-dynamic-metadata-test

./: README.md  hatch_build.py  pyproject.toml
dependency/: pyproject.toml
dynamic_dependency/: pyproject.toml
package/: pyproject.toml
root/: pyproject.toml
