[project]
name = "package"
version = "0.1.0"
readme = "README.md"
authors = [
    { name = "Charlie Marsh", email = "charlie.r.marsh@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "dynamic-dependency",
]

[tool.uv.workspace]
members = ["./dynamic_dependency"]

[tool.uv.sources]
dynamic-dependency = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
