[project]
name = "package"
version = "0.1.0"
authors = [
    { name = "Charlie Marsh", email = "charlie.r.marsh@gmail.com" }
]
requires-python = ">=3.12"
dynamic = ["dependencies"]

[tool.uv.workspace]
members = ["./dependency"]

[tool.uv.sources]
dependency = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel.hooks.custom]
