[project]
name = "package"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Charlie Marsh", email = "charlie.r.marsh@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "hatchling-dynamic",
]

[project.scripts]
package = "package:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
hatchling-dynamic = { path = "../hatchling_dynamic" }
